<resources>
    <string name="app_name">All Video Downloader</string>
    <string name="title_home">Home</string>
    <string name="download">Downloads</string>
    <string name="quickest_video_downloader_for_anyone">Quickest Video Downloader for Anyone</string>
    <string name="search_or_enter_url_address">Search or Enter url address</string>
    <string name="permission_message">You need to enable all these permission to use the app</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="soundcloud">SoundCloud</string>
    <string name="vimeo">Vimeo</string>
    <string name="dailymotion">Dailymotion</string>
    <string name="twitter">Twitter</string>
    <string name="vevo">Vevo</string>
    <string name="metcafe">Metacafe</string>
    <string name="twitch">Twitch</string>
    <string name="something_to_search">Please enter something to search</string>
    <string name="proceed">Proceed</string>
    <string name="share">Share</string>
    <string name="copy_link">Copy Link</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="add_bookmark">Add Bookmark</string>
    <string name="share_using">Share Via</string>
    <string name="no_url_share">No url found to share!</string>
    <string name="link_copied">Link copied to clipboard</string>
    <string name="no_url_to_copy">No url found to copy!</string>
    <string name="refresh">Refresh</string>
    <string name="no_video_resource_found">No Video Resource Found</string>
    <string name="please_play_the_video_first_and_download_button_will_be_available_after_video_downloader_detect_the_video">Please play the video first, and download button will be available after video downloader detect the video.</string>
    <string name="got_it">Got it!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_this_video">Do you want to download this video?</string>
    <string name="video_is_already_downloading">Video is already downloading in background</string>
    <string name="generate_download_link">Genearting Download Link..</string>
    <string name="watch">Watch</string>
    <string name="youtube_restrictions">Youtube Restrictions</string>
    <string name="download_video_youtube">Due to legal restrictions, you are not allowed to download video from youtube. Please download your video from other websites.</string>
    <string name="bookmark_already_exist">Bookmark already exist</string>
    <string name="added_success">Added Successfully</string>
    <string name="no_url_to_book">No url to add bookmark</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="no_bookmark_found">No Bookmark(s) Found!</string>
    <string name="delete_this_bookmark">Do you want to delete this bookmark?</string>
    <string name="no_file_s_downloaded_found">No File(s) downloaded found!</string>
    <string name="delete">Delete</string>
    <string name="download_location">Download Location</string>
    <string name="delmsg">Do you want to delete this video?</string>
    <string name="file_deleted">File Deleted</string>
    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="size">Size</string>
    <string name="date_and_time">Date and Time</string>
    <string name="path">Path</string>
    <string name="paste_link">Paste Link</string>
    <string name="how_to_download">How to download?</string>
    <string name="download_link_text">All Video Downloader is a fast and free way for downloading and saving videos. Start by putting the any video URL in the box below and click download Button</string>
    <string name="paste_your_video_link_here">Paste your video link here</string>
    <string name="download_">Download</string>
    <string name="fill_the_field">Please fill the field</string>
    <string name="valid_url">Please enter a valid url</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="do_you_want_exit">Do you want to exit?</string>
    <string name="exit">Exit</string>
    <string name="rate_us">Rate Us</string>
    <string name="agree">I have read and accept the <u>Terms and Conditions</u>.</string>
    <string name="termsandc"><u>Terms and Condiditions</u></string>

    <string name="termpara">Our product i.e (All Video Downloader) asks user to grant certain permissions . This access is used by the application in the following ways:\n\n
        \n1. Use storage permission to store the downloaded video.\n
        \n2. Use internet to download the video.\n
        \n3. Built-in codes to detect and download the video from specific websites.\n
        \n4. Video downloader is not accessing any Youtube as it is against their policy.\n
        \n5. User can\'t download Youtube video as app contains some checks to avoid downloading the video and not violating their privacy.\n
        \n6. As we using api\'s to download, so we are not violating any policy.\n
        \n7. Support more than 50 websites to download video from.\n
    </string>
    <string name="nextbtn">Agree and Continue</string>
    <string name="please_check_video_url_link">Please check the url because it is not a video link</string>
</resources>