<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/browse_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/refresh" />
    <item
        android:id="@+id/browse_share"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/share" />
    <item
        android:id="@+id/browse_copy"
        android:icon="@drawable/ic_baseline_file_copy_24"
        android:title="@string/copy_link" />
    <item
        android:id="@+id/browse_bookmarks"
        android:icon="@drawable/ic_baseline_bookmark_24"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/browse_add_bookmark"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/add_bookmark" />
</menu>