<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.video.downloading.app.downloader.online.app.fragments.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <argument
            android:name="webAddress"
            app:argType="string" />
        <action
            android:id="@+id/action_navigation_home_to_bookmarkFragment"
            app:destination="@id/bookmarkFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.video.downloading.app.downloader.online.app.fragments.DownloadFragment"
        android:label="@string/download"
        tools:layout="@layout/fragment_download" />

    <fragment
        android:id="@+id/bookmarkFragment"
        android:name="com.video.downloading.app.downloader.online.app.fragments.BookmarkFragment"
        android:label="@string/bookmarks"
        tools:layout="@layout/fragment_bookmark" >
        <action
            android:id="@+id/action_bookmarkFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>