<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.PasteLinkFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/how_to_download"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_14ssp" />

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:justificationMode="inter_word"
            android:text="@string/download_link_text"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_12ssp"
            tools:targetApi="o" />
    </LinearLayout>


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/videoUrl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_margin="@dimen/_14sdp"
        android:background="@drawable/square_edittext"
        android:hint="@string/paste_your_video_link_here"
        android:padding="@dimen/_10sdp"
        android:singleLine="true"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/_14ssp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/downloadBtn"
        android:layout_width="@dimen/_180sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_gravity="center"
        android:gravity="center"
        app:icon="@drawable/download_icon"
        app:iconSize="@dimen/_14sdp"
        android:text="@string/download_"
        android:textSize="@dimen/_12ssp" />
</LinearLayout>