<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="8sp"
        android:text="@string/details"
        android:textAlignment="textStart"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="20sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"

        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:textStyle="normal"
        android:textColor="@color/colorBtn"
        android:textSize="14sp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:text="@string/size"

        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textSize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="10dp"

        android:textColor="@color/colorBtn"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:text="@string/date_and_time"

        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:textColor="@color/colorBtn"
        android:textSize="14sp"
        android:textStyle="normal" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="10dp"
        android:text="@string/path"

        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textpath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:layout_marginTop="10dp"

        android:textColor="@color/colorBtn"
        android:textSize="14sp"
        android:textStyle="normal" />
</LinearLayout>