<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="8sp"
                android:text="@string/youtube_restrictions"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="@dimen/_200sdp"
                android:layout_height="@dimen/_70sdp"
                android:layout_gravity="center"

                android:layout_margin="@dimen/_2sdp"
                android:contentDescription="@string/download"
                android:padding="@dimen/_1sdp"
                android:scaleType="centerInside"
                android:src="@drawable/stoputbe" />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"

                android:text="@string/download_video_youtube"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_12ssp" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>